Started writing on our proposal

--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -91,13 +91,13 @@ Although a completely different beast, the same principles apply to the atomic c
 \section{GPS signals and Time}\label{GST}
 During the introduction of this essay the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS, it is also used for timing. The GPS satellites transmits a \textit{Coarse/Acquisition (C/A)} code and a restricted \textit{Precision (P)} code. The C/A code is freely open for everyone and is transmitted at the L1 carrier frequency (1575.42 MHz) and the P code is transmitted at both L1 and L2 (1227.60 MHz) and is reserved for the military. The C/A code is a 1023 bit pseudo random code that is transmitted at 1.023 Mbit/s, which means it repeats itself every millisecond. Each satellite transmits a different pseudo random code, codes that does not correlate well with each other. This is important because it makes it possible to separate the satellites from each other. The way the receiver calculates the distance from itself to the satellites is by comparing the pseudo random code received from the satellite with an identical one it generates itself. The receiver "slides" these codes over each other further and further until they match up. The signals travel time is determined by how far the codes have to be slided. This is what is called \textit{Code-phase GPS} and it has got some problems. Since the codes have a wide cycle width, almost a microsecond, there is a lot of slop and at the speed of light, a microsecond is roughly 300 meters. What many receivers do is that they start with the code-phase and moves on to using measurements based on the carrier frequency. Since the frequency is much higher, the slop decreases and the accuracy increases dramatically. This is whats known as \textit{Carrier-phase GPS}. 
 
-Alright, but what about time? We have already established that the key to GPS is measuring the travel time of a radio signal, but considering the consequences of a couple of microseconds of slack when dealing light-speed, it is really putting some pressure on the GPS receivers internal clocks. As previously mentioned, all you need to find your position in a three dimensional space, is three GPS satellites. If the GPS receivers internal clocks where perfect, the three satellite ranges would intersect at a single point, your position. But in the real world our clocks is everything but perfect. One could use atomic clocks in the receivers but that would make the receivers to expensive for anyone to buy. The solution is to make a fourth measurement from a fourth satellite. This measurement will not intersect with the first three when using an imperfect clock. The receiver can then try to find a correction factor it can subtract from its timing measurement in order to make the measurements intersect. By doing this, it also brings the receivers clock back to sync with universal time. With the correct time, it can also make correct and precise positioning. \cite{TRIMBLETIME}
+Alright, but what about time? We have already established that the key to GPS is measuring the travel time of a radio signal, but considering the consequences of a couple of microseconds of slack when dealing light-speed, it is really putting some pressure on the GPS receivers internal clocks. As previously mentioned, all you need to find your position in a three dimensional space, is three GPS satellites. If the GPS receivers internal clocks where perfect, the three satellite ranges would intersect at a single point, your position. But in the real world our clocks is everything but perfect. One could use atomic clocks  in the receivers but that would make the receivers to expensive (even though chip scale atomic clocks (CSAC) are becoming increasingly affordable \ref{op}) for anyone to buy. The solution is to make a fourth measurement from a fourth satellite. This measurement will not intersect with the first three when using an imperfect clock. The receiver can then try to find a correction factor it can subtract from its timing measurement in order to make the measurements intersect. By doing this, it also brings the receivers clock back to sync with universal time. With the correct time, it can also make correct and precise positioning. \cite{TRIMBLETIME}
 
 \section{Phasor Measurement Units}
 An example of an application relying on GPS derived time is a PMU (phasor measurement unit).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is often obtained by using GPS. \cite{YLJRNR} The value of such a device is understood clearer by recognizing that the power grid is a complex, interconnected, interdependent network. In other words, errors and abnormalities in one part of the grid will have an effect on operation elsewhere and in some cases lead to whole spread blackouts \cite{EVPMUGA}.
 
 \section{Threat Models and countermeasures}
-The thread models and countermeasures presented is based on the article \textit{Reliable GPS-Based Timing for Power Systems: A Multi-Layered, Multi Receiver} by L. Heng, D. Chou and G. Xingxin Gao (2012). 
+The thread models and countermeasures presented in this paper are based on the article \textit{Reliable GPS-Based Timing for Power Systems: A Multi-Layered, Multi Receiver} by L. Heng, D. Chou and G. Xingxin Gao (2012). The only exception is our proposed countermeasure under \ref{op}.
 \subsection{Threats}
 \subsubsection{Jamming}\label{jam}
 By emitting a high-power signal at the frequencies used by GPS satellites, one can interfere with the signals received by the GPS receiver, effectively denying GPS receivers use of these signals. These signals are already weak considering their travel from space. Such an "attack", although effective, is pretty naive and easily recognized by the jammed party. If your equipment is operational and you don't have a signal, you are probably being jammed.
@@ -144,7 +144,17 @@ This countermeasure assumes two receivers with at least 1 km distance from each 
 \textit{Vector tracking} is a receiver architecture that combine the tasks of signal tracking and position/velocity estimation into one algorithm. This is a contrast to the traditional way where the tracking methods track satellites independently as well as the position/velocity solution independently. Even though this requires more computing power, it increases immunity to interference and jamming. The vector tracking is aided by the fact the we know the PMU GPS receivers true location. The tracking robustness can be further improved by using a Kalman filter. Since a PMU and its GPS receiver remain stationary, the parameters of the tracking loops can be chosen to narrow the loop filter bandwidth which reduces noise and the effective radius of a potential jamming attack (\ref{jam}). Meaconing attacks will also fail since the PIA vector tracking depends on the knowledge of the GPS receivers true position. In the event of such an attack, the result would be that the vector tracking will fail to function. \cite{HengChouGao14}  
 
 \subsubsection{Multi-receiver tracking loops}\label{mrtl}
-Building on the idea from \textit{PIA Tracking loops}(\ref{ptl}) one can benefit from the networked nature of the GPS-timed PMU. In a multi-receiver vector tracking loop, many receivers process information in collaboration. A key conclusion of the research made by A. Soloviev \textit{et alia} as referenced by L. Heng \textit{et alia} (2014) showed that acquisition and tracking performance under low signal-to-noise ratio conditions was improved under multi-receiver signal accumulation. Multi-receiver phased arrays also improved the robustness against both jamming (\ref{jam}) and spoofing attacks (\ref{sls},\ref{dls}) by \textit{"Forming beams to satellites and steering nulls in the direction of attacking transmitters"} (L. Heng \textit{et alia} (2014), p.41). In addition to the increase robustness, is better detection of malfunction (\ref{mf]}. A faulty receiver will usually not be consistent with other correctly functioning receivers. As with the countermeasure based on cross-correlating P(Y) code (\ref{ccpc}), this implementation also requires that the GPS receivers are able to output baseband samples. In this implementation, the samples need to be transmitted continuously among the receivers which could require a capable data network such as a LAN. 
+Building on the idea from \textit{PIA Tracking loops}(\ref{ptl}) one can benefit from the networked nature of the GPS-timed PMU. In a multi-receiver vector tracking loop, many receivers process information in collaboration. A key conclusion of the research made by A. Soloviev \textit{et alia} as referenced by L. Heng \textit{et alia} (2014) showed that acquisition and tracking performance under low signal-to-noise ratio conditions was improved under multi-receiver signal accumulation. Multi-receiver phased arrays also improved the robustness against both jamming (\ref{jam}) and spoofing attacks (\ref{sls},\ref{dls}) by \textit{"Forming beams to satellites and steering nulls in the direction of attacking transmitters"} (L. Heng \textit{et alia} (2014), p.41). In addition to the increase robustness, is better detection of malfunction (\ref{mf]}. A faulty receiver will usually not be consistent with other correctly functioning receivers. As with the countermeasure based on cross-correlating P(Y) code (\ref{ccpc}), this implementation also requires that the GPS receivers are able to output baseband samples. In this implementation, the samples need to be transmitted continuously among the receivers which could require a capable data network such as a LAN. \cite{HengChouGao14}  
+
+\newpage
+\subsubsection{Spoof proof CSAC SMACC}\label{op}
+\begin{wrapfigure}{c}{0.45\textwidth}
+  \centering
+  \includegraphics[width=0.40\textwidth]{csac.jpg}
+  \caption[Symmetricom SA.45s CSAC]
+   {Symmetricom SA.45s CSAC. Courtesy Symmetricom.}
+\end{wrapfigure} 
+We propose to use a smart miniature atomic clock controller(SMACC) with a chip scale atomic clock(CSAC) to complement a commercial GPS controlled clock to harden it against attacks. The Symmetricom SA.45 is CSAC measuring only 16cc with 1 PPS output and 1 PPS input (for sync) as well as a RS-232 interface. The key to our proposal is that we have a clock that we can trust and use as a reference. Any correction needed as implied by the GPS signal will be checked with the CSAC. If the correction is to big, an alarm will be raised. In the event of a jamming attack, a CSAC like this can be used to correct a GPS controlled clock instead of the 1 PPS output from a GPS receiver. In the event of a spoofing attack on an PMU with a GPS controlled clock, the stable nature of the CSAC can be used by a controller to detect the attack and to disable the GPS correction and instead rely on the CSAC for correction. When used with an atomic clock, the controller can simply turn of the GPS correction since the atomic clock would keep better time than the CSAC. It's the same story with replay attacks, once again having a trusted reference clock enables us to detect the attack.
 
 \newpage
 \subsection{Summary}
