--- a/refs.bib
+++ b/refs.bib
@@ -35,7 +35,7 @@
   year = 2000,
   volume = 33,
   pages = "477-497",
-  url = {\url{www.ieee-uffc.org/main/history/step.pdf}}
+  url = {www.ieee-uffc.org/main/history/step.pdf}
 }
 
 @misc{NATINT,
@@ -48,7 +48,7 @@
 @misc{GISTRILATERATE,
   author = "GIS Commons",
   howpublished = {\url{http://giscommons.org/files/2010/01/2.141.gif}},
-  url = {\url{http://giscommons.org/chapter-2-input/}},
+  url = {http://giscommons.org/chapter-2-input/},
   note = {Licenced under CC BY-SA 3.0 \url{http://creativecommons.org/licenses/by-sa/3.0/}}
 }
 
@@ -83,7 +83,7 @@
 @misc{DENCES,
   author = "Dennis S.K",
   howpublished = {\url{http://en.wikipedia.org/wiki/Caesium}},
-  url = {\url{http://commons.wikimedia.org/wiki/User:Dnn87#/media/File:CsCrystals1.JPG}},
+  url = {http://commons.wikimedia.org/wiki/User:Dnn87#/media/File:CsCrystals1.JPG},
   note = {Licenced under CC BY-SA 3.0 \url{http://creativecommons.org/licenses/by-sa/3.0/}}
 }
 
@@ -96,7 +96,7 @@
 @article{SGRCOOPMU,
   author = "Xichen Jiang",
   title = "SPOOFING GPS RECEIVER CLOCK OFFSET OF PHASOR MEASUREMENT UNITS",
-  url = {\url{tcipg.org/sites/default/files/papers/2012_Q2_CPR2.pdf}},
+  url = {tcipg.org/sites/default/files/papers/2012_Q2_CPR2.pdf},
   year = 2012
 }
 
