--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -144,7 +144,7 @@ This countermeasure assumes two receivers with at least 1 km distance from each 
 \textit{Vector tracking} is a receiver architecture that combine the tasks of signal tracking and position/velocity estimation into one algorithm. This is a contrast to the traditional way where the tracking methods track satellites independently as well as the position/velocity solution independently. Even though this requires more computing power, it increases immunity to interference and jamming. The vector tracking is aided by the fact the we know the PMU GPS receivers true location. The tracking robustness can be further improved by using a Kalman filter. Since a PMU and its GPS receiver remain stationary, the parameters of the tracking loops can be chosen to narrow the loop filter bandwidth which reduces noise and the effective radius of a potential jamming attack (\ref{jam}). Replay spoofing attacks will also fail since the PIA vector tracking depends on the knowledge of the GPS receivers true position. In the event of such an attack, the result would be that the vector tracking will fail to function. \cite{HengChouGao14}  
 
 \subsubsection{Multi-receiver tracking loops}\label{mrtl}
-Building on the idea from \textit{PIA Tracking loops}(\ref{ptl}) one can benefit from the networked nature of the GPS-timed PMU. In a multi-receiver vector tracking loop, many receivers process information in collaboration. A key conclusion of the research made by A. Soloviev \textit{et alia} as referenced by L. Heng \textit{et alia} (2014) showed that acquisition and tracking performance under low signal-to-noise ratio conditions was improved under multi-receiver signal accumulation. Multi-receiver phased arrays also improved the robustness against both jamming (\ref{jam}) and spoofing attacks (\ref{sls},\ref{dls}) by \textit{"Forming beams to satellites and steering nulls in the direction of attacking transmitters"} (L. Heng \textit{et alia} (2014), p.41). In addition to the increase robustness, it increases the ability to detect malfunction (\ref{mf}. A faulty receiver will usually not be consistent with other correctly functioning receivers. As with the countermeasure based on cross-correlating P(Y) code (\ref{ccpc}), this implementation also requires that the GPS receivers are able to output baseband samples. In this implementation, the samples need to be transmitted continuously among the receivers which requires a capable data network such as a typical LAN. \cite{HengChouGao14}  
+Building on the idea from \textit{PIA Tracking loops}(\ref{ptl}) one can benefit from the networked nature of the GPS-timed PMU. In a multi-receiver vector tracking loop, many receivers process information in collaboration. A key conclusion of the research made by A. Soloviev \textit{et alia} as referenced by L. Heng \textit{et alia} (2014) showed that acquisition and tracking performance under low signal-to-noise ratio conditions was improved under multi-receiver signal accumulation. Multi-receiver phased arrays also improved the robustness against both jamming (\ref{jam}) and spoofing attacks (\ref{sls},\ref{dls}) by \textit{"Forming beams to satellites and steering nulls in the direction of attacking transmitters"} (L. Heng \textit{et alia} (2014), p.41). In addition to the increase robustness, it increases the ability to detect malfunction (\ref{mf}). A faulty receiver will usually not be consistent with other correctly functioning receivers. As with the countermeasure based on cross-correlating P(Y) code (\ref{ccpc}), this implementation also requires that the GPS receivers are able to output baseband samples. In this implementation, the samples need to be transmitted continuously among the receivers which requires a capable data network such as a typical LAN. \cite{HengChouGao14}  
 
 \subsubsection{Spoof proof CSAC SMACC}\label{op}
 \begin{wrapfigure}{c}{0.45\textwidth}
@@ -167,13 +167,13 @@ We propose to use a smart miniature atomic clock controller(SMACC) that controls
   \item Checking time solutions against receiver clock statistics (\ref{ctsarcs})
   \item Monitoring Signal Power(\ref{msp})
 \end{itemize}
-Even tough any atomic clock would do, we propose to use the Symmetricom SA.45. This is a CSAC measuring only 16cc with 1 pulse per second (PPS) output and 1 PPS input (for disciplining) as well as a RS-232 interface. 
-\begin{figure}[]\label{bd}
+In theory, any atomic clock would suffice for our application. This would however be highly unpractical and also very expensive. We therefore propose to use the Symmetricom SA.45. This is a CSAC measuring only 16cc with 1 pulse per second (PPS) output and 1 PPS input (for disciplining) as well as a RS-232 interface. The SA.45's strength is it's low power consumption (less than 120mW) and low price \cite{SADS}. It is important to note that the properties of the SA.45 is what makes our proposal feasible, not the manufacturer or the model. A CSAC with similar properties and specifications would of course also work for our proposal.
+\begin{figure}\label{bd}
   \includegraphics[angle=90, scale=0.5]{master_sketch_arrows.pdf}
    \caption[CSAC SMACC Block diagram]{A block diagram of our proposed solution}
 \end{figure}
 
-It is important to note that this approach doesn't really do anything with the fact that you are being attacked, it simply tries to eliminate the effects of it. In a scenario where you are under attack weeks at a time, you will have to address the fact that you are under attack at some point. It is also important to notes that this countermeasure mostly apply to applications using GPS as a source of time. Having a stable clock during a jamming attack will not help you determine your position once you move (given that you are fully jammed).
+It is also important to note that this approach doesn't really do anything with the fact that you are being attacked, it simply tries to eliminate the effects of it. In a scenario where you are under attack weeks at a time, you will have to address the issue that you are under attack at some point. It is also important to notes that this countermeasure mostly apply to applications using GPS as a source of time. Having a stable clock during a jamming attack will not help you determine your position once you move (given that you are fully jammed).
 
 \newpage
 \subsection{Summary}
@@ -207,7 +207,7 @@ The table (\ref{tab:threatcounttable}) shows the different threat models and the
 \end{savenotes} 
 
  \begin{table}[h]
-    \caption{Legend for table (\ref{tab:threatcounttable)}}
+    \caption{Legend for table (\ref{tab:threatcounttable}) }
     \begin{tabular}{|c|c|c|c|c|c|}
     \hline
     \cellcolor{effectivec}Y & Effective & \cellcolor{ineffectivec}N & Ineffective & \cellcolor{auxiliryc}X & Auxiliary \\ \hline
