--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -25,9 +25,17 @@
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
 \definecolor{mymauve}{rgb}{0.58,0,0.82}
 
-\definecolor{effectivec}{RGB}{70,240,161}
-\definecolor{auxiliryc}{RGB}{115,70,240}
-\definecolor{ineffectivec}{RGB}{70,149,240}
+\definecolor{auxiliryc}{RGB}{70,240,161} %Green
+
+\definecolor{ineffectivec}{RGB}{70,149,240} %purple
+
+\definecolor{effectivec}{RGB}{115,70,240} % Blue
+
+%\definecolor{effectivec}{RGB}{70,149,240}
+
+%\definecolor{ineffectivec}{RGB}{115,70,240}
+
+%\definecolor{auxiliryc}{RGB}{70,240,161}
 
 
 
@@ -210,7 +218,7 @@ The table (\ref{tab:threatcounttable}) shows the different threat models and the
     \caption{Legend for table (\ref{tab:threatcounttable}) }
     \begin{tabular}{|c|c|c|c|c|c|}
     \hline
-    \cellcolor{effectivec}Y & Effective & \cellcolor{ineffectivec}N & Ineffective & \cellcolor{auxiliryc}X & Auxiliary \\ \hline
+    \cellcolor{auxiliryc}Y & Effective & \cellcolor{ineffectivec}N & Ineffective & \cellcolor{effectivec}X & Auxiliary \\ \hline
     \end{tabular}
   \end{table}
  
