--- a/unik4740/refs.bib
+++ b/unik4740/refs.bib
@@ -12,4 +12,12 @@
   type = {Report},
   institution = "Budapest University of Technology and Economics: Department of Telecommunications",
   note = {Accessed: 7-9-2015}
+
+}
+
+@misc{MSRPC,
+  author = "Microsoft TechNet",
+  title = "What Is RPC",
+  howpublished = {\url{https://technet.microsoft.com/en-us/library/cc787851.aspx}},
+  note = {Accessed: 8-09-2015}
 }
