--- a/unik4740/refs.bib
+++ b/unik4740/refs.bib
@@ -12,8 +12,18 @@
   type = {Report},
   institution = "Budapest University of Technology and Economics: Department of Telecommunications",
   note = {Accessed: 7-9-2015}
-
 }
+
+ @techreport{DUQU_SYMANTEC,
+  author = "Symantec",
+  title = {W32.Duqu: The precursor to the next Stuxnet},
+  howpublished = {\url{http://www.symantec.com/content/en/us/enterprise/media/security_response/whitepapers/w32_duqu_the_precursor_to_the_next_stuxnet.pdf}},
+  type = {Report},
+  institution = "Symantec Security Response",
+  note = {Accessed: 8-9-2015}
+}
+
+
 
 @misc{MSRPC,
   author = "Microsoft TechNet",
