Half finished with the installer

--- a/unik4740/refs.bib
+++ b/unik4740/refs.bib
@@ -23,11 +23,18 @@
   note = {Accessed: 8-9-2015}
 }
 
-
-
 @misc{MSRPC,
   author = "Microsoft TechNet",
   title = "What Is RPC",
   howpublished = {\url{https://technet.microsoft.com/en-us/library/cc787851.aspx}},
   note = {Accessed: 8-09-2015}
 }
+
+@misc{RYAN_ZDNET,
+  author = "Ryan Naraine",
+  title = "Microsoft issues temporary 'fix-it' for Duqu zero-day",
+  howpublished = {\url{http://www.zdnet.com/article/microsoft-issues-temporary-fix-it-for-duqu-zero-day/}},
+  note = {Accessed: 8-09-2015}
+}
+
+
