--- a/unik4740/duqu.tex
+++ b/unik4740/duqu.tex
@@ -84,13 +84,22 @@ The registry is a database used in Microsoft Windows to store settings and optio
 \subsection{RPC}
 Remote Procedure Calls (RPC) is a system that allows programmers to write distributed software without worrying about the underlying network code. It is most often used to create a server/client model. \cite{MSRPC}
 
-\subsection{Code-signing}
-
-
 \section{Installation}
+\subsection{Preparation}
+In one of the most discussed examples oh Duqu installation, Duqu was delivered to the target by using a malformed Microsoft Word document. The Word document contained an exploit in the Win32k TrueType font parsing engine which allowed arbitrary code to run in kernel mode. According to Microsoft the Duqu malware exploits a problem in T2EMBED.DLL which is called by the TrueType font parsing engine in some cases.\cite{RYAN_ZDNET} Once the Word document is opened and the exploit triggered, the code will do a check to determine whether or not the target has been infected. This is done by checking the registry for the following value:
+\begin{lstlisting}
+    HKEY_LOCAL_MACHINE\ SOFTWARE\Microsoft\Windows\CurrentVersion\Internet Settings\Zones\4\"CF1D" 
+\end{lstlisting}
+Unless the value is found, indicating that the computer is compromised, the code decrypts two files from the Word document:
+ \begin{enumerate}
+   \item  jminet7.sys or cmi4432.sys, both drivers.
+   \item  netp191.pnf or cmi4432.pnf, both DLLs.
+  \end{enumerate}
+The code then executes the driver file which injects code into services.exe. This behavior is defined by the config file (either netp192.pnf or cmi4464.pnf respectively). Before it exits completely, the code wipes itself from memory by overwriting itself with zeroes.
 
+\subsection{The install}
 
 \newpage
 \printbibliography[title={Complete Bibliography},heading=bibintoc]
 
-\end{document}                    
+\end{document}                     
